[package]
name = "axum-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
axum-extra = { version = "0.4", features = ["spa"] }
tower-http = { version = "0.3.0", features = ["trace"] }
jsonwebtoken = "8.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
rust-embed = "6"