[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
dashmap = "5.4.0"
http = "0.2.8"
prost = "0.11"
thiserror = "1.0.38"
tracing = "0.1.37"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing-subscriber = "0.3.16"
