[package]
name = "ws-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"
pin-project = "1"

ws-shared = { path = "../ws-shared" }

[dev-dependencies]
anyhow = "1"
assert_unordered = "0.3"